--- a/config/nginx/django_2.conf
+++ b/config/nginx/django_2.conf
@@ -22,7 +22,7 @@ server {
     ssl_certificate_key /etc/nginx/letsencrypt/live/<APP-ULR.COM>/privkey.pem;
 
     location / {
-        proxy_pass http://rsvp_minimal:8000;
+        proxy_pass http://<APP-URL>:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
